--- a/002_NN_tranieren.ipynb
+++ b/002_NN_tranieren.ipynb
@@ -339,7 +339,9 @@
     "            train(ep, loader_train)\n",
     "\n",
     "        # save the trained model checkpoint\n",
-    "        save_checkpoint(arg.dir_base)\n"
+    "        save_checkpoint(arg.dir_base)\n",
+    "\n",
+    "        # think it is better here to safe the config file\n"
    ]
   },
   {
@@ -367,350 +369,113 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "ep: 0, loss_C loss_I: 0.35768 0.00359 \n"
+      "ep: 0, loss_C loss_I: 0.27582 0.00192 \n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "  4%|▍         | 1/24 [09:26<3:33:18, 556.44s/it]"
+      "  4%|▍         | 1/24 [09:35<3:37:11, 566.59s/it]"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "ep: 1, loss_C loss_I: 0.00443 0.00298 \n"
+      "ep: 1, loss_C loss_I: 0.00265 0.00155 \n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "  8%|▊         | 2/24 [18:16<3:18:36, 541.64s/it]"
+      "  8%|▊         | 2/24 [18:53<3:25:50, 561.41s/it]"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "ep: 2, loss_C loss_I: 0.00101 0.00266 \n"
+      "ep: 2, loss_C loss_I: 0.00407 0.00139 \n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      " 12%|█▎        | 3/24 [27:00<3:06:58, 534.22s/it]"
+      " 12%|█▎        | 3/24 [28:43<3:21:06, 574.58s/it]"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "ep: 3, loss_C loss_I: 0.00039 0.00241 \n"
+      "ep: 3, loss_C loss_I: 0.00518 0.00129 \n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      " 17%|█▋        | 4/24 [35:55<2:58:08, 534.42s/it]"
+      " 17%|█▋        | 4/24 [38:56<3:15:05, 585.26s/it]"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "ep: 4, loss_C loss_I: 0.00086 0.00220 \n"
+      "ep: 4, loss_C loss_I: 0.00100 0.00118 \n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      " 21%|██        | 5/24 [45:10<2:51:21, 541.16s/it]"
+      " 21%|██        | 5/24 [59:46<4:22:26, 828.78s/it]"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "ep: 5, loss_C loss_I: 0.00042 0.00195 \n"
+      "ep: 5, loss_C loss_I: 0.00304 0.00106 \n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      " 25%|██▌       | 6/24 [54:02<2:41:30, 538.39s/it]"
+      " 25%|██▌       | 6/24 [1:15:55<4:23:02, 876.79s/it]"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "ep: 6, loss_C loss_I: 0.00011 0.00184 \n"
+      "ep: 6, loss_C loss_I: 0.00069 0.00100 \n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      " 29%|██▉       | 7/24 [1:02:45<2:31:07, 533.41s/it]"
+      " 25%|██▌       | 6/24 [1:21:32<4:04:38, 815.47s/it]\n"
      ]
     },
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "ep: 7, loss_C loss_I: 0.00019 0.00166 \n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      " 33%|███▎      | 8/24 [1:11:19<2:20:35, 527.21s/it]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "ep: 8, loss_C loss_I: 0.00005 0.00160 \n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      " 38%|███▊      | 9/24 [1:19:51<2:10:40, 522.69s/it]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "ep: 9, loss_C loss_I: 0.00004 0.00149 \n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      " 42%|████▏     | 10/24 [1:28:27<2:01:24, 520.29s/it]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "ep: 10, loss_C loss_I: 0.00010 0.00136 \n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      " 46%|████▌     | 11/24 [1:36:59<1:52:17, 518.29s/it]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "ep: 11, loss_C loss_I: 0.00009 0.00134 \n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      " 50%|█████     | 12/24 [1:45:33<1:43:23, 516.95s/it]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "ep: 12, loss_C loss_I: 0.00019 0.00126 \n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      " 54%|█████▍    | 13/24 [1:54:07<1:34:34, 515.85s/it]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "ep: 13, loss_C loss_I: 0.00024 0.00128 \n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      " 58%|█████▊    | 14/24 [2:02:41<1:25:52, 515.23s/it]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "ep: 14, loss_C loss_I: 0.00010 0.00126 \n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      " 62%|██████▎   | 15/24 [2:11:20<1:17:25, 516.14s/it]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "ep: 15, loss_C loss_I: 0.00048 0.00126 \n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      " 67%|██████▋   | 16/24 [2:19:54<1:08:46, 515.81s/it]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "ep: 16, loss_C loss_I: 0.00006 0.00126 \n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      " 71%|███████   | 17/24 [2:28:35<1:00:20, 517.24s/it]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "ep: 17, loss_C loss_I: 0.00005 0.00126 \n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      " 75%|███████▌  | 18/24 [2:37:08<51:36, 516.02s/it]  "
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "ep: 18, loss_C loss_I: 0.00005 0.00126 \n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      " 79%|███████▉  | 19/24 [2:45:52<43:12, 518.48s/it]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "ep: 19, loss_C loss_I: 0.00008 0.00125 \n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      " 83%|████████▎ | 20/24 [2:54:24<34:26, 516.59s/it]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "ep: 20, loss_C loss_I: 0.00006 0.00125 \n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      " 88%|████████▊ | 21/24 [3:02:56<25:45, 515.24s/it]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "ep: 21, loss_C loss_I: 0.00004 0.00125 \n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      " 92%|█████████▏| 22/24 [3:11:29<17:08, 514.25s/it]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "ep: 22, loss_C loss_I: 0.00003 0.00124 \n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      " 96%|█████████▌| 23/24 [3:20:02<08:33, 513.97s/it]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "ep: 23, loss_C loss_I: 0.00002 0.00124 \n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "100%|██████████| 24/24 [3:28:26<00:00, 521.10s/it]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "checkpoint saved.\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "\n"
+     "ename": "KeyboardInterrupt",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
+      "\u001b[1;32m/home/sebastian/025_FundE_Teil2/F-E-Project_Part_2/002_NN_tranieren.ipynb Cell 21\u001b[0m in \u001b[0;36m2\n\u001b[1;32m      <a href='vscode-notebook-cell:/home/sebastian/025_FundE_Teil2/F-E-Project_Part_2/002_NN_tranieren.ipynb#X26sZmlsZQ%3D%3D?line=0'>1</a>\u001b[0m \u001b[39m# Execute \u001b[39;00m\n\u001b[0;32m----> <a href='vscode-notebook-cell:/home/sebastian/025_FundE_Teil2/F-E-Project_Part_2/002_NN_tranieren.ipynb#X26sZmlsZQ%3D%3D?line=1'>2</a>\u001b[0m main_train()\n",
+      "\u001b[1;32m/home/sebastian/025_FundE_Teil2/F-E-Project_Part_2/002_NN_tranieren.ipynb Cell 21\u001b[0m in \u001b[0;36m2\n\u001b[1;32m     <a href='vscode-notebook-cell:/home/sebastian/025_FundE_Teil2/F-E-Project_Part_2/002_NN_tranieren.ipynb#X26sZmlsZQ%3D%3D?line=26'>27</a>\u001b[0m \u001b[39m# train for each epoch\u001b[39;00m\n\u001b[1;32m     <a href='vscode-notebook-cell:/home/sebastian/025_FundE_Teil2/F-E-Project_Part_2/002_NN_tranieren.ipynb#X26sZmlsZQ%3D%3D?line=27'>28</a>\u001b[0m \u001b[39mfor\u001b[39;00m ep \u001b[39min\u001b[39;00m trange(arg\u001b[39m.\u001b[39mep_train):\n\u001b[0;32m---> <a href='vscode-notebook-cell:/home/sebastian/025_FundE_Teil2/F-E-Project_Part_2/002_NN_tranieren.ipynb#X26sZmlsZQ%3D%3D?line=28'>29</a>\u001b[0m     train(ep, loader_train)\n\u001b[1;32m     <a href='vscode-notebook-cell:/home/sebastian/025_FundE_Teil2/F-E-Project_Part_2/002_NN_tranieren.ipynb#X26sZmlsZQ%3D%3D?line=30'>31</a>\u001b[0m \u001b[39m# save the trained model checkpoint\u001b[39;00m\n\u001b[1;32m     <a href='vscode-notebook-cell:/home/sebastian/025_FundE_Teil2/F-E-Project_Part_2/002_NN_tranieren.ipynb#X26sZmlsZQ%3D%3D?line=31'>32</a>\u001b[0m save_checkpoint(arg\u001b[39m.\u001b[39mdir_base)\n",
+      "\u001b[1;32m/home/sebastian/025_FundE_Teil2/F-E-Project_Part_2/002_NN_tranieren.ipynb Cell 21\u001b[0m in \u001b[0;36m5\n\u001b[1;32m     <a href='vscode-notebook-cell:/home/sebastian/025_FundE_Teil2/F-E-Project_Part_2/002_NN_tranieren.ipynb#X26sZmlsZQ%3D%3D?line=47'>48</a>\u001b[0m optim\u001b[39m.\u001b[39mzero_grad()\n\u001b[1;32m     <a href='vscode-notebook-cell:/home/sebastian/025_FundE_Teil2/F-E-Project_Part_2/002_NN_tranieren.ipynb#X26sZmlsZQ%3D%3D?line=49'>50</a>\u001b[0m \u001b[39m# calculate and backpropagate the total loss\u001b[39;00m\n\u001b[0;32m---> <a href='vscode-notebook-cell:/home/sebastian/025_FundE_Teil2/F-E-Project_Part_2/002_NN_tranieren.ipynb#X26sZmlsZQ%3D%3D?line=50'>51</a>\u001b[0m \u001b[39msum\u001b[39;49m([l \u001b[39mfor\u001b[39;49;00m l \u001b[39min\u001b[39;49;00m [lossC,lossI] \u001b[39mif\u001b[39;49;00m l \u001b[39mis\u001b[39;49;00m \u001b[39mnot\u001b[39;49;00m \u001b[39mNone\u001b[39;49;00m])\u001b[39m.\u001b[39;49mbackward()\n\u001b[1;32m     <a href='vscode-notebook-cell:/home/sebastian/025_FundE_Teil2/F-E-Project_Part_2/002_NN_tranieren.ipynb#X26sZmlsZQ%3D%3D?line=52'>53</a>\u001b[0m \u001b[39m# update the optimizer variables\u001b[39;00m\n\u001b[1;32m     <a href='vscode-notebook-cell:/home/sebastian/025_FundE_Teil2/F-E-Project_Part_2/002_NN_tranieren.ipynb#X26sZmlsZQ%3D%3D?line=53'>54</a>\u001b[0m optim\u001b[39m.\u001b[39mstep()\n",
+      "File \u001b[0;32m~/.local/lib/python3.10/site-packages/torch/_tensor.py:487\u001b[0m, in \u001b[0;36mTensor.backward\u001b[0;34m(self, gradient, retain_graph, create_graph, inputs)\u001b[0m\n\u001b[1;32m    477\u001b[0m \u001b[39mif\u001b[39;00m has_torch_function_unary(\u001b[39mself\u001b[39m):\n\u001b[1;32m    478\u001b[0m     \u001b[39mreturn\u001b[39;00m handle_torch_function(\n\u001b[1;32m    479\u001b[0m         Tensor\u001b[39m.\u001b[39mbackward,\n\u001b[1;32m    480\u001b[0m         (\u001b[39mself\u001b[39m,),\n\u001b[0;32m   (...)\u001b[0m\n\u001b[1;32m    485\u001b[0m         inputs\u001b[39m=\u001b[39minputs,\n\u001b[1;32m    486\u001b[0m     )\n\u001b[0;32m--> 487\u001b[0m torch\u001b[39m.\u001b[39;49mautograd\u001b[39m.\u001b[39;49mbackward(\n\u001b[1;32m    488\u001b[0m     \u001b[39mself\u001b[39;49m, gradient, retain_graph, create_graph, inputs\u001b[39m=\u001b[39;49minputs\n\u001b[1;32m    489\u001b[0m )\n",
+      "File \u001b[0;32m~/.local/lib/python3.10/site-packages/torch/autograd/__init__.py:200\u001b[0m, in \u001b[0;36mbackward\u001b[0;34m(tensors, grad_tensors, retain_graph, create_graph, grad_variables, inputs)\u001b[0m\n\u001b[1;32m    195\u001b[0m     retain_graph \u001b[39m=\u001b[39m create_graph\n\u001b[1;32m    197\u001b[0m \u001b[39m# The reason we repeat same the comment below is that\u001b[39;00m\n\u001b[1;32m    198\u001b[0m \u001b[39m# some Python versions print out the first line of a multi-line function\u001b[39;00m\n\u001b[1;32m    199\u001b[0m \u001b[39m# calls in the traceback and some print out the last line\u001b[39;00m\n\u001b[0;32m--> 200\u001b[0m Variable\u001b[39m.\u001b[39;49m_execution_engine\u001b[39m.\u001b[39;49mrun_backward(  \u001b[39m# Calls into the C++ engine to run the backward pass\u001b[39;49;00m\n\u001b[1;32m    201\u001b[0m     tensors, grad_tensors_, retain_graph, create_graph, inputs,\n\u001b[1;32m    202\u001b[0m     allow_unreachable\u001b[39m=\u001b[39;49m\u001b[39mTrue\u001b[39;49;00m, accumulate_grad\u001b[39m=\u001b[39;49m\u001b[39mTrue\u001b[39;49;00m)\n",
+      "\u001b[0;31mKeyboardInterrupt\u001b[0m: "
      ]
     }
    ],
